  * Remove unneeded debian/ufsutils.dirs file.
  * Reword warning about not enabling _FILE_OFFSET_BITS=64 on GNU/kFreeBSD,
    fix typos, and remove repeated text.
  * Switch to use the upstream build system. Add a Build-Depends on
    freebsd-buildutils for pmake.
  * Do not require root on the clean target.
  * Use «dpkg-parsechangelog -S» instead of sed-filtering the output.

 -- Robert Millan <rmh@debian.org>  Thu, 08 Dec 2011 13:40:32 +0100

ufsutils (8.2-3) unstable; urgency=low

  * Add myself to Uploaders.
  * Remove remnants of ZFS when creating a new file system.  (Closes: #635272)
    - 04_portable_berase.patch: Fix berase().
    - 05_wipe_otherfs.patch: Wipe out other filesystems by erasing first and
      last 512 kiB of disk (this works for at least ZFS, in addition to UFS1
      which was already taken care of).
  * 00_portable_ufs_types.patch: Fix broken type for non-kFreeBSD
    platforms.  Thanks Vladimir Serbinenko.  (Closes: #646518)

 -- Robert Millan <rmh@debian.org>  Sun, 27 Nov 2011 18:18:04 +0100

ufsutils (8.2-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * Fix 01_libufs.patch to correctly character or block devices.  Closes:
    #526586, #634158.
  * Fix 02_fsdb.ufs.patch to make ufsutils buildable with --as-needed. 
    Closes: #632564.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 23 Jul 2011 19:28:17 +0200

ufsutils (8.2-1) unstable; urgency=low

  [ Robert Millan ]
  * Set ufsutils-udeb to kfreebsd-any.

  [ Guillem Jover ]
  * New upstream version (based on FreeBSD 8.2)
  * Now using Standards-Version 3.9.2 (no changes needed).
  * Switch to source format “3.0 (quilt)”.
    - Remove quilt from Build-Depends.
    - Remove patch target in debian/rules.
    - Remove now unneeded README.source.
    - Refresh all patches.
  * Reorganize source code:
    - Switch from debian/upstream.sh to debian/rules get-orig-source target.
    - Switch from CVS to Subversion to retrieve the source code.